# rust-ddd-book-manager

./: Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  docker-compose.yml  openapi.json
api/: Cargo.toml
api/src/: error.rs  lib.rs  logging.rs  main.rs  openapi.rs  registry.rs  router.rs
api/src/auth/: auth_error.rs  claims.rs  extractor.rs  jwks.rs  jwt.rs  mod.rs
api/src/logging/: logger.rs
api/src/registry/: mod.rs
api/src/router/: book.rs  mod.rs  user.rs
api/src/router/book/: handlers.rs  router.rs
api/src/router/user/: handlers.rs  router.rs
api/src/user/: me.rs  mod.rs
application/: Cargo.toml
application/src/: book.rs  lib.rs  shared.rs
application/src/author/: mod.rs  registry.rs
application/src/author/dto/: response.rs
application/src/author/service/: authors_factory_service.rs  mod.rs
application/src/book/: dto.rs  interface.rs  mod.rs  query.rs  registry.rs
application/src/book/command/: checkout_book.rs  create_book.rs  delete_book.rs  mod.rs  return_book.rs  update_book.rs
application/src/book/dto/: identity.rs  mod.rs  query.rs  request.rs  response.rs
application/src/book/interface/: mod.rs
application/src/book/query/: get_book_details.rs  get_book_list.rs  get_checkout_history.rs  mod.rs
application/src/shared/: dto.rs  error.rs
application/src/user/: command.rs  dto.rs  interface.rs  mod.rs  registry.rs
application/src/user/command/: get_or_create_actor.rs  get_or_create_user.rs  mod.rs
application/src/user/dto/: enums.rs  request.rs  response.rs
application/src/user/interface/: mod.rs
application/src/user/query/: get_user_details.rs  mod.rs
domain/: Cargo.toml
domain/src/: lib.rs  shared.rs  user.rs
domain/src/audit/: actor.rs  audit_context.rs  clock.rs  entity_audit.rs  mod.rs
domain/src/auth/: actor.rs  mod.rs  permission.rs
domain/src/author/: entity.rs  values.rs
domain/src/author/entity/: author_entity.rs
domain/src/author/interface/: mod.rs
domain/src/author/values/: author_name.rs  author_reference.rs
domain/src/book/: entity.rs  mod.rs  values.rs
domain/src/book/entity/: book_entity.rs  mod.rs
domain/src/book/interface/: mod.rs
domain/src/book/values/: book_author.rs  book_author_list.rs  book_author_name.rs  book_checkout.rs  book_description.rs  book_isbn.rs  book_owner.rs  book_title.rs  mod.rs
domain/src/shared/: error.rs  id.rs
domain/src/user/: enums.rs  interface.rs  mod.rs
domain/src/user/entity/: mod.rs  user_entity.rs
domain/src/user/enums/: mod.rs
domain/src/user/interface/: mod.rs
domain/src/user/values/: mod.rs  user_email.rs  user_name.rs  user_reference.rs
infrastructure/: Cargo.toml
infrastructure/src/: author.rs  book.rs  config.rs  lib.rs  macros.rs  user.rs
infrastructure/src/author/: domain_query_service.rs  repository.rs
infrastructure/src/book/: book_query_service.rs  book_queryservice.rs  book_repository.rs  mod.rs  query_service.rs  repository.rs
infrastructure/src/database/: mod.rs  row.rs
infrastructure/src/database/entity/: authors.rs  book_authors.rs  book_checkouts.rs  books.rs  mod.rs  prelude.rs  users.rs
infrastructure/src/database/row/: book.rs  book_rows.rs  mod.rs  user_row.rs  user_rows.rs
infrastructure/src/database/row/author/: mod.rs  rows.rs
infrastructure/src/database/row/book/: aggregate.rs  rows.rs
infrastructure/src/database/row/user/: rows.rs
infrastructure/src/user/: domain_query_service.rs  mod.rs  query_service.rs  repository.rs  user_domain_query_service.rs  user_query_service.rs  user_repository.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  macros.rs
