[package]
name = "api"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain.workspace = true
application.workspace = true
infrastructure.workspace = true

strum.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
derive-new.workspace = true
itertools.workspace = true
serde.workspace = true
async-trait.workspace = true

axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
serde_json = "1.0.132"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
