[package]
name = "application"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
strum.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
derive-new.workspace = true
itertools.workspace = true
serde.workspace = true
