[package]
name = "application"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
domain.workspace = true

strum.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
derive-new.workspace = true
itertools.workspace = true
serde.workspace = true
async-trait.workspace = true

garde = { version = "0.22.1", features = ["derive"] }
schemars.workspace = true
