[package]
name = "domain"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
strum.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
derive-new.workspace = true
itertools.workspace = true
serde.workspace = true
async-trait.workspace = true
schemars.workspace = true

email_address = "0.2.9"
