[package]
name = "infrastructure"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
domain.workspace = true
application.workspace = true

strum.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
derive-new.workspace = true
itertools.workspace = true
serde.workspace = true
async-trait.workspace = true

sea-orm = { version = "2.0.0-rc.28", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "uuid",
    "chrono",
    "macros",
    "debug-print",
] }
